syntax = "proto3";

option java_multiple_files = true;

option java_package = "com.cloudbees.grpcserver";


service TrainTicketService {
  rpc SubmitPurchase(PurchaseRequest) returns (PurchaseResponse);
  rpc ViewReceipt(ViewReceiptRequest) returns (ViewReceiptResponse);
  rpc ViewUsersBySection(ViewUsersBySectionRequest) returns (ViewUsersBySectionResponse);
  rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse);
  rpc ModifyUserSeat(ModifyUserSeatRequest) returns (ModifyUserSeatResponse);
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
}

message PurchaseRequest {
  string from = 1;
  string to = 2;
  User user = 3;
  double price_paid = 4;
}

message PurchaseResponse {
  string receipt_details = 1;
}

message ViewReceiptRequest {
  string email = 1;
}

message ViewReceiptResponse {
  string receipt_details = 1;
}

message ViewUsersBySectionRequest {
  string section = 1;
}

message ViewUsersBySectionResponse {
  repeated UserSeatInfo user_seat_info = 1;
}

message RemoveUserRequest {
  string email = 1;
}

message RemoveUserResponse {
  bool success = 1;
}

message ModifyUserSeatRequest {
  string email = 1;
  string new_section = 2;
  int32 new_seat_number = 3;
}

message ModifyUserSeatResponse {
  bool success = 1;
}

message AddUserRequest {
  User user = 1;
}

message AddUserResponse {
  bool success = 1;
}

message User {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

message UserSeatInfo {
  User user = 1;
  string section = 2;
  int32 seat_number = 3;
}

